working function, will show list of lost bikes near you
Co-authored-by: Monica Barboza<MonBoza@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,17 @@
     <title>Bike Index API</title>
 </head>
 <body>
-    
+    <h1>Stolen Bikes</h1>
+    <form class="stolen-bikes">
+        <label for="location">Location:</label>
+        <input id="location" type="text" name="location">
+        <br />
+        <button type="submit" class="btn">View List</button>
+    </form>
+    <div id="results">
+        <p id="displayResults"></p>
+    </div>
 </body>
 </html>
+
+
