--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,18 @@
     <title>Bike Index API</title>
 </head>
 <body>
+    <div class="container">
     <h1>Stolen Bikes</h1>
+    <hr>
     <form class="stolen-bikes">
         <label for="location">Location:</label>
+        <br />
         <input id="location" type="text" name="location">
+        <br />
         <br />
         <button type="submit" class="btn">View List</button>
     </form>
+    </div>
     <div id="results">
         <p id="displayResults"></p>
     </div>
